--- a/index.html
+++ b/index.html
@@ -4678,9 +4678,10 @@
                         <button class="evn-btn-calculate" onclick="fetchLumentreeData()" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%);">
                             🔄 Lấy Dữ Liệu
                         </button>
-                        <p style="margin: 10px 0 0 0; font-size: 0.8em; color: #9ca3af; text-align: center;">
-                            💡 <em>Nếu không lấy được, hãy thử lại 4-5 lần hoặc chuyển sang tab <strong style="color: #f59e0b;">📋 Thủ Công</strong></em>
-                        </p>
+                        <div style="margin: 12px 0 0 0; font-size: 0.75em; color: #9ca3af; text-align: left; line-height: 1.6;">
+                            <p style="margin: 0 0 6px 0;">💡 <em>Nếu chưa có data, hãy vào <a href="https://lumentree.net" target="_blank" style="color: #10b981; text-decoration: underline;">lumentree.net</a> để kích hoạt ID thiết bị trước, chờ 5-10 phút rồi thử lại.</em></p>
+                            <p style="margin: 0;">🔄 <em>Nếu không lấy được, hãy thử lại 4-5 lần hoặc chuyển sang tab <strong style="color: #f59e0b;">📋 Thủ Công</strong></em></p>
+                        </div>
                     </div>
                 </div>
                 
